[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/panel_blue.png" type="Texture" id=1]
[ext_resource path="res://assets/light_shadow_light.png" type="Texture" id=2]
[ext_resource path="res://scripts/dynamicwall.gd" type="Script" id=3]
[ext_resource path="res://assets/lantern.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void vertex(){
	VERTEX.x += 1f;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 10 )

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[node name="dynamicwall_pattern1" type="Area2D"]
material = SubResource( 2 )
position = Vector2( 0, 195 )
script = ExtResource( 3 )

[node name="panel_sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="dynamicwall_collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 240 )
z_index = 10
shape = SubResource( 3 )

[node name="light" type="Light2D" parent="."]
position = Vector2( 128, 128 )
z_index = 1
texture = ExtResource( 2 )
texture_scale = 0.5
energy = 1.14
mode = 3

[node name="lantern_sprite" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 125.992, 0 )
scale = Vector2( 0.2, 0.2 )
z_index = 2
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_dynamicwall_pattern1_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_dynamicwall_pattern1_body_exited"]
