[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/light_shadow_light.png" type="Texture" id=1]
[ext_resource path="res://assets/panel_yellow1.png" type="Texture" id=2]
[ext_resource path="res://scripts/dynamicwall.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void vertex(){
	VERTEX.x += 1f;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=4]

[node name="dynamicwall_pattern2" type="Area2D"]
material = SubResource( 2 )
position = Vector2( 0, 195 )
script = ExtResource( 3 )
MOVE_SPEED = 30.0

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="dynamicwall_collision_left" type="CollisionShape2D" parent="."]
position = Vector2( 0, 210 )
z_index = 10
shape = SubResource( 3 )

[node name="light" type="Light2D" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 1 )
texture_scale = 0.5
color = Color( 0.984314, 0.94902, 0.862745, 1 )
energy = 1.48
mode = 2
range_item_cull_mask = 3

[node name="death_zone_2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_zone_2"]
position = Vector2( 40, 210 )
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_dynamicwall_pattern2_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_dynamicwall_pattern2_body_exited"]
[connection signal="body_entered" from="death_zone_2" to="." method="_on_death_zone_2_body_entered"]
