[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/dynamicwall.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.8813, 299.228 )

[node name="win_panel" type="Area2D"]
script = ExtResource( 1 )

[node name="win_collider" type="CollisionShape2D" parent="."]
position = Vector2( 40.4787, 299.225 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_win_panel_body_entered"]
